# openclaw-manager

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.githooks/: pre-push
.snow/: codebase.json  permissions.json
.snow/codebase/: embeddings.db
docs/: Web部署说明.md  openclaw-config-audit.md  openclaw-config-guide.md  初始化说明.md  开发规范.md
scripts/: 1panel_web_start.sh  1panel_web_stop.sh  git-secrets-scan.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml
src-tauri/src/: main.rs  web_server.rs
src-tauri/src/commands/: config.rs  diagnostics.rs  installer.rs  process.rs  service.rs
src-tauri/src/models/: config.rs
src-tauri/src/utils/: platform.rs  shell.rs
src/components/AIConfig/: index.tsx
src/components/Channels/: index.tsx
src/components/Dashboard/: SystemInfo.tsx  index.tsx
src/components/Layout/: Header.tsx  Sidebar.tsx
src/components/Logs/: index.tsx
src/components/Service/: index.tsx
src/components/Settings/: index.tsx
src/components/Setup/: index.tsx
src/components/Testing/: index.tsx
src/lib/: invoke.ts  tauri.ts
src/styles/: globals.css
